# stoppropaganda_tray

./: Cargo.toml  Idlerunner.toml  README.md
src/: console.rs  idle_windows.rs  main.rs  tray.rs
